[gd_scene load_steps=41 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/StageScene3D/Scenes2/SexMatingPress.gd" type="Script" id=4]

[sub_resource type="AnimationNodeAnimation" id=446]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=447]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=474]
animation = "SexMatingPressFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=475]
animation = "SexMatingPressInside_1-loop"

[sub_resource type="AnimationNodeAnimation" id=476]
animation = "SexMatingPressTease_1-loop"

[sub_resource type="AnimationNodeAnimation" id=477]
animation = "SexMatingPress_1-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=478]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=479]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=480]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=481]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=482]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=483]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=498]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=499]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=500]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=501]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=484]
states/SexMatingPressFast_1-loop/node = SubResource( 474 )
states/SexMatingPressFast_1-loop/position = Vector2( 378, 360 )
states/SexMatingPressInside_1-loop/node = SubResource( 475 )
states/SexMatingPressInside_1-loop/position = Vector2( 278, 145 )
states/SexMatingPressTease_1-loop/node = SubResource( 476 )
states/SexMatingPressTease_1-loop/position = Vector2( 501, 61 )
states/SexMatingPress_1-loop/node = SubResource( 477 )
states/SexMatingPress_1-loop/position = Vector2( 512, 221 )
transitions = [ "SexMatingPressTease_1-loop", "SexMatingPressInside_1-loop", SubResource( 478 ), "SexMatingPressInside_1-loop", "SexMatingPressTease_1-loop", SubResource( 479 ), "SexMatingPressInside_1-loop", "SexMatingPress_1-loop", SubResource( 480 ), "SexMatingPress_1-loop", "SexMatingPressInside_1-loop", SubResource( 481 ), "SexMatingPress_1-loop", "SexMatingPressFast_1-loop", SubResource( 482 ), "SexMatingPressFast_1-loop", "SexMatingPress_1-loop", SubResource( 483 ), "SexMatingPressTease_1-loop", "SexMatingPress_1-loop", SubResource( 498 ), "SexMatingPress_1-loop", "SexMatingPressTease_1-loop", SubResource( 499 ), "SexMatingPressFast_1-loop", "SexMatingPressInside_1-loop", SubResource( 500 ), "SexMatingPressInside_1-loop", "SexMatingPressFast_1-loop", SubResource( 501 ) ]
start_node = "SexMatingPressTease_1-loop"
graph_offset = Vector2( -11, -44 )

[sub_resource type="AnimationNodeBlendTree" id=485]
graph_offset = Vector2( -348.69, 38.9555 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 484 )
nodes/StateMachine/position = Vector2( 200, 120 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "CuffsBlend", "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=460]

[sub_resource type="AnimationNodeAnimation" id=486]
animation = "SexMatingPressFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=487]
animation = "SexMatingPressInside_2-loop"

[sub_resource type="AnimationNodeAnimation" id=488]
animation = "SexMatingPressTease_2-loop"

[sub_resource type="AnimationNodeAnimation" id=489]
animation = "SexMatingPress_2-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=490]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=491]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=492]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=493]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=494]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=495]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=502]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=503]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=504]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=505]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=496]
states/SexMatingPressFast_2-loop/node = SubResource( 486 )
states/SexMatingPressFast_2-loop/position = Vector2( 342, 336 )
states/SexMatingPressInside_2-loop/node = SubResource( 487 )
states/SexMatingPressInside_2-loop/position = Vector2( 342, 147 )
states/SexMatingPressTease_2-loop/node = SubResource( 488 )
states/SexMatingPressTease_2-loop/position = Vector2( 522, 59 )
states/SexMatingPress_2-loop/node = SubResource( 489 )
states/SexMatingPress_2-loop/position = Vector2( 522, 242 )
transitions = [ "SexMatingPressTease_2-loop", "SexMatingPressInside_2-loop", SubResource( 490 ), "SexMatingPressInside_2-loop", "SexMatingPressTease_2-loop", SubResource( 491 ), "SexMatingPressInside_2-loop", "SexMatingPress_2-loop", SubResource( 492 ), "SexMatingPress_2-loop", "SexMatingPressInside_2-loop", SubResource( 493 ), "SexMatingPress_2-loop", "SexMatingPressFast_2-loop", SubResource( 494 ), "SexMatingPressFast_2-loop", "SexMatingPress_2-loop", SubResource( 495 ), "SexMatingPressTease_2-loop", "SexMatingPress_2-loop", SubResource( 502 ), "SexMatingPress_2-loop", "SexMatingPressTease_2-loop", SubResource( 503 ), "SexMatingPressInside_2-loop", "SexMatingPressFast_2-loop", SubResource( 504 ), "SexMatingPressFast_2-loop", "SexMatingPressInside_2-loop", SubResource( 505 ) ]
start_node = "SexMatingPressTease_2-loop"

[sub_resource type="AnimationNodeBlendTree" id=497]
graph_offset = Vector2( -322.532, 74.6842 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 496 )
nodes/StateMachine/position = Vector2( 180, 140 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "CuffsBlend", "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=473]

[node name="SexMatingPress" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.317465, -1.77462 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.371, -0.049, -0.04 )

[node name="Doll3D2" parent="." index="2" instance=ExtResource( 1 )]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0.371132, -0.0490924, 0 )

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource( 485 )
anim_player = NodePath("../Doll3D/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 460 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="4"]
tree_root = SubResource( 497 )
anim_player = NodePath("../Doll3D2/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 473 )

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="Doll3D/DollSkeleton2"]
[editable path="Doll3D2"]
[editable path="Doll3D2/DollSkeleton"]
[editable path="Doll3D2/DollSkeleton2"]
